--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="script.js">
-    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script> 
+    <link rel="stylesheet" href="style.css ">
 </head>
 <body>
-    
+    <div class="meme-generator  ">
+        <button class="generate-meme-btn">
+            Generate meme
+        </button>
+        <h2 class="meme-title">Loading...</h2>
+
+        <img src="" alt="">
+        <div class="meme-author"></div>
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
